[project]
name = "grd-init"
version = "0.1.0"
description = "Download subfolders and files from GitHub repos"
authors = [{name = "Amit Bhagat"}]
dependencies = [
    "typer",
    "rich",
    "requests",
]
requires-python = ">=3.10"

[project.scripts]
grd = "grd.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
